memory match game
did the structure but eventually vibe coded the match part

--- a/p10_memoryMatch/index.css
+++ b/p10_memoryMatch/index.css
@@ -29,7 +29,7 @@ body {
     padding-top: 20px;
 }
 
-.btnformat button:hover {
+.btnformat button.hidden:hover {
     background-image: url(rusure.jpg);
 }
 
